dfir_rs/tests/compile-fail/stable/surface_lattice_fold_push_wrongtype.stderr
error[E0277]: the trait bound `impl dfir_rs::dfir_pipes::push::Push<SetUnion<_>, (), CanPend = <dfir_rs::dfir_pipes::push::Fanout<impl dfir_rs::dfir_pipes::push::Push<SetUnion<_>, (), CanPend = <Accumulate<FoldState<&mut SetUnion<HashSet<u32>>, {closure@$DIR/tests/compile-fail/stable/surface_lattice_fold_push_wrongtype.rs:7:19: 7:31}, SetUnion<HashSet<u32>>, SetUnion<_>>, dfir_rs::dfir_pipes::push::Map<impl dfir_rs::dfir_pipes::push::Push<SetUnion<HashSet<u32>>, (), CanPend = <dfir_rs::dfir_pipes::push::ForEach<{closure@$DIR/tests/compile-fail/stable/surface_lattice_fold_push_wrongtype.rs:7:88: 7:91}> as dfir_rs::dfir_pipes::push::Push<SetUnion<HashSet<u32>>, ()>>::CanPend>, {closure@$DIR/tests/compile-fail/stable/surface_lattice_fold_push_wrongtype.rs:7:19: 7:31}>> as dfir_rs::dfir_pipes::push::Push<SetUnion<_>, ()>>::CanPend>, impl dfir_rs::dfir_pipes::push::Push<SetUnion<_>, (), CanPend = <dfir_rs::dfir_pipes::push::ForEach<fn(SetUnion<_>) {std::mem::drop::<SetUnion<_>>}> as dfir_rs::dfir_pipes::push::Push<SetUnion<_>, ()>>::CanPend>> as dfir_rs::dfir_pipes::push::Push<SetUnion<_>, ()>>::CanPend>: dfir_rs::dfir_pipes::push::Push<{integer}, ()>` is not satisfied
 --> tests/compile-fail/stable/surface_lattice_fold_push_wrongtype.rs:6:50
  |
6 |         my_tee = source_iter([1, 2, 3, 4, 5]) -> tee();
  |                                                  ^^^ unsatisfied trait bound
  |
  = help: the trait `dfir_rs::dfir_pipes::push::Push<{integer}, ()>` is not implemented for `impl dfir_rs::dfir_pipes::push::Push<SetUnion<_>, (), CanPend = <dfir_rs::dfir_pipes::push::Fanout<impl dfir_rs::dfir_pipes::push::Push<SetUnion<_>, (), CanPend = <Accumulate<FoldState<&mut SetUnion<HashSet<u32>>, {closure@$DIR/tests/compile-fail/stable/surface_lattice_fold_push_wrongtype.rs:7:19: 7:31}, SetUnion<HashSet<u32>>, SetUnion<_>>, dfir_rs::dfir_pipes::push::Map<impl dfir_rs::dfir_pipes::push::Push<SetUnion<HashSet<u32>>, (), CanPend = <dfir_rs::dfir_pipes::push::ForEach<{closure@$DIR/tests/compile-fail/stable/surface_lattice_fold_push_wrongtype.rs:7:88: 7:91}> as dfir_rs::dfir_pipes::push::Push<SetUnion<HashSet<u32>>, ()>>::CanPend>, {closure@$DIR/tests/compile-fail/stable/surface_lattice_fold_push_wrongtype.rs:7:19: 7:31}>> as dfir_rs::dfir_pipes::push::Push<SetUnion<_>, ()>>::CanPend>, impl dfir_rs::dfir_pipes::push::Push<SetUnion<_>, (), CanPend = <dfir_rs::dfir_pipes::push::ForEach<fn(SetUnion<_>) {std::mem::drop::<SetUnion<_>>}> as dfir_rs::dfir_pipes::push::Push<SetUnion<_>, ()>>::CanPend>> as dfir_rs::dfir_pipes::push::Push<SetUnion<_>, ()>>::CanPend>`
  = help: the following other types implement trait `dfir_rs::dfir_pipes::push::Push<Item, Meta>`:
            `&mut P` implements `dfir_rs::dfir_pipes::push::Push<Item, Meta>`
            `Accumulate<State, Next>` implements `dfir_rs::dfir_pipes::push::Push<<State as AccumState>::Input, ()>`
            `DemuxEnum<Outputs>` implements `dfir_rs::dfir_pipes::push::Push<Item, Meta>`
            `FoldKeyed<&mut HashMap<K, Acc, S>, InitFn, CombFn, Next, K, V, Acc>` implements `dfir_rs::dfir_pipes::push::Push<(K, V), ()>`
            `Persist<Psh, Buf>` implements `dfir_rs::dfir_pipes::push::Push<Item, ()>`
            `ReduceKeyed<&mut HashMap<K, V, S>, ReduceFn, Next, K, V>` implements `dfir_rs::dfir_pipes::push::Push<(K, V), ()>`
            `ResolveFutures<Psh, Queue, QueueInner>` implements `dfir_rs::dfir_pipes::push::Push<Fut, ()>`
            `Sort<Item, Next>` implements `dfir_rs::dfir_pipes::push::Push<Item, ()>`
          and $N others
note: required by a bound in `pivot_run_sg_1v1`
 --> tests/compile-fail/stable/surface_lattice_fold_push_wrongtype.rs:6:50
  |
6 |         my_tee = source_iter([1, 2, 3, 4, 5]) -> tee();
  |                                                  ^^^ required by this bound in `pivot_run_sg_1v1`
